# ic-quickjs-demo

./: Cargo.toml  README.md  compile.sh
src/: README  ic.js  lib.rs
src/.github/: CODEOWNERS
src/engine/: engine.js  mod.rs
src/management_canister/: mod.rs
src/system_api/: mod.rs
